# FunctionalSurface

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: taq_cleaner.py  taq_fetcher.ipynb
examples/: example.ipynb  func_garch_gas_example.py  func_garch_snp.ipynb  gas_vol_surface.py
funcgarch/: __init__.py  basis.py  context_manager.py  garch.py  gas.py  simulate.py  utils.py
matlab/: SP500.csv  construct_likelihood_repara.m  gas_volatility.m
sas_scripts/: export.sas  nbbo_minute_reader.sas
scripts/: fgarch_vol_surface_container.py  func_garch_gas_example.py  garch_vol_surface_container.py  garch_vs_gas_container.py  gas_garch_comparison.py  gas_vol_surface.py  gas_vol_surface_container.py
tests/: test_basis.py  test_garch.py
wrds/: data_fetcher.sas  dynamic_taq_minute.sas  export.sas  nbbo_minute_reader.sas  taq_cleaner.sas
