[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funcgarch"
version = "1.1.4"
description = "Functional GARCH and GAS-GARCH models for intraday volatility"
readme = "README.md"
authors = [{name = "Daan Zunnenberg", email = "dw.zunnenberg@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.57",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7", "jupyter"]

[tool.setuptools.packages.find]
include = ["funcgarch*"]
